--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,9 +12,11 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        
+
         <activity
             android:name="com.coolweather.app.activity.ChooseAreaActivity"
             android:label="@string/app_name" >
@@ -28,7 +30,14 @@
             android:name="com.coolweather.app.WeatherActivity"
             android:label="@string/title_activity_weather" >
         </activity>
-        <activity android:name="com.coolweather.app.activity.WeatherActivity"></activity>
+        <activity android:name="com.coolweather.app.activity.WeatherActivity" >
+        </activity>
+        <activity
+            android:name="com.coolweather.app.AutoUpdateService"
+            android:label="@string/title_activity_auto_update_service" >
+        </activity>
+        <service android:name="com.coolweather.app.service.AutoUpdateService"></service>
+        <receiver android:name="com.coolweather.app.receiver.AutoUpdateReceiver"></receiver>
     </application>
 
 </manifest>
